--- a/WorkInterruption/src/main/AndroidManifest.xml
+++ b/WorkInterruption/src/main/AndroidManifest.xml
@@ -22,6 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="de.nenick.workinterruption.contentprovider.WorkInterruptionProvider"
+            android:authorities="de.nenick.workinterruption"
+            android:exported="false" >
+            <grant-uri-permission android:pathPattern=".*" />
+        </provider>
+
+        <activity
+            android:name="de.nenick.workinterruption.ListActivity"
+            android:label="@string/title_activity_list"
+            android:parentActivityName="MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
     </application>
 
 </manifest>
