best unit testing with mockito, its limited by mass final methods

--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
     compile 'com.android.support:support-v4:13.0.+'
     compile project (':DataAccess')
+
+    instrumentTestCompile ('com.google.dexmaker:dexmaker:1.0')
+    instrumentTestCompile ('com.google.dexmaker:dexmaker-mockito:1.0')
 }
 
 android {
@@ -22,7 +25,7 @@ android {
     buildToolsVersion "17.0.0"
 
     defaultConfig {
-        minSdkVersion 7
+        minSdkVersion 14
         targetSdkVersion 17
     }
 }
