--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <provider
+                android:name=".dataaccess.api.WorkInterruptionProvider"
+                android:authorities="de.nenick.workinterruption"
+                android:exported="false" >
+            <grant-uri-permission android:pathPattern=".*" />
+        </provider>
+
         <activity
             android:name=".application.MainActivity"
             android:label="@string/app_name" >
@@ -23,17 +31,10 @@
             </intent-filter>
         </activity>
 
-        <provider
-            android:name=".dataaccess.api.WorkInterruptionProvider"
-            android:authorities="de.nenick.workinterruption"
-            android:exported="false" >
-            <grant-uri-permission android:pathPattern=".*" />
-        </provider>
-
         <activity
-            android:name=".application.DoingListActivity"
+            android:name=".application.TaskListActivity"
             android:label="@string/title_activity_list"
-            android:parentActivityName="MainActivity" >
+            android:parentActivityName=".application.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
